# sentiment-service

./: README.md  docker-compose.yml  sa_classifier.pickle  test.py  train_model.py
deployment_files/: pyproject.toml  requirements.txt
deployment_files/package/botocore-1.34.49.dist-info/: RECORD
deployment_files/package/nltk-3.8.1.dist-info/: RECORD
deployment_files/package/tqdm-4.66.2.dist-info/: RECORD
deployment_files/sentiment_analysis/: main.py
web/: Dockerfile  app.py  main.py  requirements.txt
web/static/: sentiment.html
