[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = "Sentiment analysis model trained to classify reviews and packaged as a FaaS using AWS Lambda"
authors = ["GregoryTomy <95327355+GregoryTomy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.49"
nltk = "^3.8.1"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
